--- a/w6-lab-5/app/src/main/res/navigation/nav_graph.xml
+++ b/w6-lab-5/app/src/main/res/navigation/nav_graph.xml
@@ -14,6 +14,11 @@
         <action
             android:id="@+id/action_FirstFragment_to_SecondFragment"
             app:destination="@id/SecondFragment" />
+        <argument
+            android:name="firstName"
+            app:argType="string"
+            app:nullable="true"
+            android:defaultValue="@null" />
     </fragment>
     <fragment
         android:id="@+id/SecondFragment"
@@ -24,5 +29,11 @@
         <action
             android:id="@+id/action_SecondFragment_to_FirstFragment"
             app:destination="@id/FirstFragment" />
+        <argument
+            android:name="firstName"
+            app:argType="string" />
+        <argument
+            android:name="lastName"
+            app:argType="string" />
     </fragment>
 </navigation>
