--- a/w7-inclass-activity-1/app/src/main/res/layout/activity_main.xml
+++ b/w7-inclass-activity-1/app/src/main/res/layout/activity_main.xml
@@ -12,9 +12,9 @@
             android:id="@+id/textView" />
 
         <EditText
+            android:id="@+id/txtID"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/txtID" />
+            android:layout_height="wrap_content" />
     </TableRow>
 
     <TableRow>
